--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-14.21
+resolver: lts-15.8
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -38,7 +38,11 @@ resolver: lts-14.21
 packages:
 
 extra-deps:
-  - require-0.4.2
+- inliterate-0.1.0@sha256:61b17ab3cef803512c264e27e463390b47af59d7d2b3a2a89bea2eac0cf84266,1853
+- megaparsec-7.0.5@sha256:45e1f1348fab2783646fdb4d9e6097568981a740951c7356d36d794e2baba305,3902
+- cheapskate-0.1.1.2@sha256:b8ae3cbb826610ea45e6840b7fde0af2c2ea6690cb311edfe9683f61c0a50d96,3072
+- require-0.4.8@sha256:7ff9ca53134bf2d7ee4f6be44b70dd8284388bbe4319fd34d33b0d8cabeed7c8,3623
+
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
