--- a/package.yaml
+++ b/package.yaml
@@ -63,6 +63,12 @@ library:
   verbatim:
     build-tool-depends: require:requirepp
 
+  # Work around compile error with `Paths_` module
+  # See https://github.com/sol/hpack#handling-of-paths_-modules
+  when:
+  - condition: false
+    other-modules: Paths_tintin
+
 executables:
   tintin:
     main: Main.hs
@@ -77,6 +83,12 @@ executables:
       - optparse-generic
     verbatim:
       build-tool-depends: require:requirepp
+
+    # Work around compile error with `Paths_` module
+    # See https://github.com/sol/hpack#handling-of-paths_-modules
+    when:
+    - condition: false
+      other-modules: Paths_tintin
 
 tests:
   tintin-test:
